# bc-envelope-pattern-rust

./: AGENTS.md  CLA.md  Cargo.toml  PHASE3_COMPLETION_SUMMARY.md  README.md  rustfmt.toml  test_captures.rs
CLA-signed/: CLA.wolfmcnally.943652EE38441760C3DC35364B6C2FCF894780AE.md
docs/: EnvelopePatternSyntax.md  PatternSyntax.md  envelope_patex.md
examples/: array_pattern_demo.rs  debug_capture_detection.rs  demonstrate_cbor_captures.rs  test_bstr.rs  test_capture_functionality.rs  test_captures.rs  test_cbor_captures.rs  test_comprehensive_map_patterns.rs  test_dcbor_capture_detailed.rs  test_dcbor_direct.rs  test_direct_cbor_pattern.rs  test_map_patterns.rs  test_map_syntax_migration.rs
src/: error.rs  format.rs  interval.rs  lib.rs  quantifier.rs  reluctance.rs  repeat.rs
src/parse/: error.rs  mod.rs  parse_pattern.rs  token.rs  utils.rs
src/parse/leaf/: array_parser.rs  bool_parser.rs  byte_string_parser.rs  cbor_parser.rs  date_parser.rs  known_value_parser.rs  map_parser.rs  mod.rs  null_parser.rs  number_parser.rs  tag_parser.rs  text_parser.rs
src/parse/meta/: and_parser.rs  capture_parser.rs  group_parser.rs  mod.rs  not_parser.rs  or_parser.rs  primary_parser.rs  search_parser.rs  sequence_parser.rs  traverse_parser.rs
src/parse/structure/: assertion_obj_parser.rs  assertion_parser.rs  assertion_pred_parser.rs  compressed_parser.rs  digest_parser.rs  elided_parser.rs  encrypted_parser.rs  leaf_parser.rs  mod.rs  node_parser.rs  object_parser.rs  obscured_parser.rs  predicate_parser.rs  subject_parser.rs  wrapped_parser.rs
src/pattern/: dcbor_integration.rs  greediness.rs  matcher.rs  mod.rs  pattern_impl.rs  vm.rs
src/pattern/leaf/: array_pattern.rs  bool_pattern.rs  byte_string_pattern.rs  cbor_pattern.rs  date_pattern.rs  known_value_pattern.rs  leaf_pattern.rs  map_pattern.rs  mod.rs  null_pattern.rs  number_pattern.rs  tagged_pattern.rs  text_pattern.rs
src/pattern/meta/: and_pattern.rs  any_pattern.rs  capture_pattern.rs  group_pattern.rs  meta_pattern.rs  mod.rs  none_pattern.rs  not_pattern.rs  or_pattern.rs  repeat_pattern.rs  search_pattern.rs  sequence_pattern.rs  traverse_pattern.rs
src/pattern/structure/: assertions_pattern.rs  digest_pattern.rs  mod.rs  (+8 more)
tests/: capture_tests.rs  cbor_integration_test.rs  credential_tests.rs  dcbor_integration_tests.rs  error_tests.rs  parse_match_tests.rs  parse_tests.rs  parse_tests_leaf.rs  parse_tests_meta.rs  parse_tests_structure.rs  parse_tests_tokens.rs  parser_integration_tests.rs  pattern_tests.rs  pattern_tests_leaf.rs  pattern_tests_meta.rs  pattern_tests_repeat.rs  pattern_tests_structure.rs  test_cbor_captures.rs  test_cbor_path_extension.rs  test_cbor_paths_formatted.rs  test_dcbor_paths.rs  test_extended_paths.rs  test_final_node_analysis.rs  test_leaf_parsing.rs  test_leaf_vs_cbor_analysis.rs  test_leaf_vs_node_zero.rs  test_tokens.rs
tests/common/: mod.rs  pattern_utils.rs  test_data.rs  test_seed.rs
