[package]
name = "bc-envelope-pattern"
version = "0.8.0"
edition = "2024"
description = "Pattern matcher for Gordian Envelope"
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-envelope-pattern-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/bc-envelope-pattern"
keywords = [
    "encoding",
    "cbor",
    "binary",
    "format",
    "serialization",
] # Up to five
categories = ["data-structures", "encoding"] # https://crates.io/category_slugs

[dependencies]
bc-envelope = "^0.37.0"
known-values = "^0.11.0"
dcbor = { version = "^0.23.3", features = ["multithreaded"] }
dcbor-parse = "^0.7.0"
dcbor-pattern = "^0.7.0"
bc-components = "^0.28.0"
bc-ur = "^0.16.0"

regex = "^1.11.1"
hex = "^0.4.3"
thiserror = "^2.0"
logos = "0.15.0"

[dev-dependencies]
hex-literal = "^0.4.1"
indoc = "^2.0.0"
bc-rand = "^0.4.2"
anyhow = "^1.0.0"
bc-tags = "^0.9.0"
